# pictag

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.js
.github/workflows/: release.yml
capabilities/: default.json
icons/: icon.icns
src/: commands.rs  main.rs  models.rs  ollama.rs  utils.rs
src-ui/: index.html
src-ui/css/: base.css  components.css  feedback.css  images.css
src-ui/js/: api.js  main.js  ui.js
~/.tauri/: pictag.key  pictag.key.pub
