[package]
name = "pictag"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json"] }
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
image = "0.25"
time = { version = "0.3", features = ["formatting", "macros"] }

[target.'cfg(windows)'.dependencies]
window-vibrancy = "0.6"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
